update page title
keep origin title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>愤怒的南瓜</title>
+    <title>angry-pumpkins 愤怒的南瓜</title>
 </head>
 <body style="background: #000; margin:0; background-image: url('background.jpg'); background-size: 1500px 800px; background-repeat: no-repeat;" onclick="showText()">
     <p id="infoText" style="display:none; font-family: system-ui; color: #a2a2a2; line-height: 1.5em; margin-left: 20px; margin-top: 750px; position:absolute;">👉 Press "Space" to reset the pumpkin.<br>👉 "Enter" to clear the world.<br>👉 Editor mode: hold down 'q', 'w', 'e', 'r', or 't' (game objects) or 'm' (monsters), and click to add objects to the world and create your own structures.</p>
